# hdr2sdr

./: .flutter-plugins-dependencies  .gitignore  AGENTS.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
.superpowers/sdd/: final-review-bc881cc..903bbd9.diff  fix-list.md  progress.md  review-99557c5..5713fa1.diff  review-bc881cc..99557c5.diff  task-1-brief.md  task-1-report.md  task-10-brief.md  task-11-brief.md  task-12-brief.md  task-13-brief.md  task-14-brief.md  task-15-brief.md  task-16-brief.md  task-17-brief.md  task-18-brief.md  task-18-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-7-brief.md  task-8-brief.md  task-9-brief.md
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
ios/: Podfile  hdr_converter.podspec
ios/Runner/: AppDelegate.swift  BackgroundService.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/ffi/: native_bridge.dart  types.dart
lib/models/: convert_params.dart  video_file.dart  video_info.dart
lib/pages/: home_page.dart  param_panel.dart  preview_panel.dart  progress_panel.dart
lib/providers/: convert_provider.dart
lib/services/: background_service.dart  ffmpeg_process.dart  path_service.dart
lib/widgets/: drop_zone.dart  file_list_tile.dart  preset_selector.dart  slider_row.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
log/: 0_Native (ubuntu-latest).txt  1_Native (macos-latest).txt  2_Build iOS IPA.txt  3_Flutter (ubuntu-latest).txt  4_Native (windows-latest).txt  5_Build Android APK.txt  6_Flutter (windows-latest).txt  7_Flutter (macos-latest).txt
log/Build Android APK/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install Android NDK.txt  4_Build native lib.txt  system.txt
log/Build iOS IPA/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install dependencies.txt  4_Build native lib.txt  system.txt
log/Flutter (macos-latest)/: 11_Post Run subosito_flutter-action@v2.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run subosito_flutter-action@v2.txt  4_Run flutter pub get.txt  5_Run flutter analyze.txt  6_Run flutter test.txt  system.txt
log/Flutter (ubuntu-latest)/: 11_Post Run subosito_flutter-action@v2.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run subosito_flutter-action@v2.txt  4_Run flutter pub get.txt  5_Run flutter analyze.txt  6_Run flutter test.txt  system.txt
log/Flutter (windows-latest)/: 11_Post Run subosito_flutter-action@v2.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run subosito_flutter-action@v2.txt  4_Run flutter pub get.txt  5_Run flutter analyze.txt  6_Run flutter test.txt  system.txt
log/Native (macos-latest)/: 18_Post Run actions_checkout@v4.txt  19_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  4_Install FFmpeg dev (macOS).txt  7_Configure CMake.txt  8_Build.txt  system.txt
log/Native (ubuntu-latest)/: 18_Post Run actions_checkout@v4.txt  19_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install FFmpeg dev (Ubuntu).txt  7_Configure CMake.txt  8_Build.txt  system.txt
log/Native (windows-latest)/: 18_Post Run actions_checkout@v4.txt  19_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  5_Setup vcpkg (Windows).txt  system.txt
logs_77682525861/: 0_Flutter (ubuntu-latest).txt  1_Build iOS IPA.txt  2_Native (windows-latest).txt  3_Flutter (macos-latest).txt  4_Native (ubuntu-latest).txt  5_Flutter (windows-latest).txt  6_Native (macos-latest).txt  7_Build Android APK.txt
logs_77682525861/Build Android APK/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install Android NDK.txt  4_Build native lib.txt  system.txt
logs_77682525861/Build iOS IPA/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install dependencies.txt  4_Build native lib.txt  system.txt
logs_77682525861/Flutter (macos-latest)/: 11_Post Run subosito_flutter-action@v2.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run subosito_flutter-action@v2.txt  4_Run flutter pub get.txt  5_Run flutter analyze.txt  6_Run flutter test.txt  system.txt
logs_77682525861/Flutter (ubuntu-latest)/: 11_Post Run subosito_flutter-action@v2.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run subosito_flutter-action@v2.txt  4_Run flutter pub get.txt  5_Run flutter analyze.txt  6_Run flutter test.txt  system.txt
logs_77682525861/Flutter (windows-latest)/: 11_Post Run subosito_flutter-action@v2.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run subosito_flutter-action@v2.txt  4_Run flutter pub get.txt  5_Run flutter analyze.txt  6_Run flutter test.txt  system.txt
logs_77682525861/Native (macos-latest)/: 18_Post Run actions_checkout@v4.txt  19_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  4_Install FFmpeg dev (macOS).txt  (+3 more)
native/: CMakeLists.txt  build_android.sh  build_ffmpeg_android.sh  build_ios.sh  toolchain-android.cmake  vcpkg-configuration.json  vcpkg.json
native/include/: hdr_converter.h
native/src/: color_converter.cpp  color_converter.h  converter.cpp  debug_log.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  gamut_mapper.h  hdr_analyzer.cpp  hdr_analyzer.h  hdr_metadata_injector.cpp  hdr_metadata_injector.h  inverse_tone_mapper.cpp  inverse_tone_mapper.h  pipeline.cpp  pipeline.h  pixel_utils.h  tone_mapper.cpp  tone_mapper.h  utils.h
test/: widget_test.dart
windows/: CMakeLists.txt
(+27 files in other folders)
